# python-anilist

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MANIFEST.in.license  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
LICENSES/: MIT.txt
anilist/: __init__.py  _compat.py  async_client.py  client_process.py  sync_client.py  utils.py
anilist/queries/: __init__.py
anilist/queries/_query_files/activity/: __init__.py  list_activity.graphql  message_activity.graphql  message_activity_sent.graphql  text_activity.graphql
anilist/queries/_query_files/get/: anime_get.graphql  character_get.graphql  list_get.graphql  list_get_anime.graphql  list_get_manga.graphql  list_item_get.graphql  manga_get.graphql  staff_get.graphql  user_get.graphql
anilist/queries/_query_files/search/: __init__.py  anime_search.graphql  character_search.graphql  manga_search.graphql  staff_search.graphql  user_search.graphql
anilist/types/: __init__.py  activity.py  anime.py  character.py  cover.py  date.py  favourites.py  image.py  manga.py  medialist.py  name.py  next_airing.py  object.py  page.py  score.py  season.py  staff.py  statistics.py  title.py  trailer.py  user.py
tests/: test_async.py  test_sync.py
