# SPDX-License-Identifier: MIT
# Copyright (C) 2021 Amano Team <https://amanoteam.com/>

[metadata]
name = python-anilist
version = 1.0.6
url = https://github.com/AmanoTeam/python-anilist
author = AmanoTeam
author_email = contact@amanoteam.com
description = A simple wrapper for AniList.
description_file = README.md
license_file = LICENSE
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: AsyncIO
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    httpx[http2]>=0.14.0
python_requires = >=3.7
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=2.12
    tox>=3.24

[options.package_data]
python-anilist = py.typed
